--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,29 @@
 clone_depth: 10
 
 environment:
+  BOOST_PROG_OPTION : "C:/projects/mlpack/\
+  boost_program_options-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_MATH : "C:/projects/mlpack/\
+  boost_math_c99-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_RANDOM : "C:/projects/mlpack/\
+  boost_random-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_SERIALIZATION : "C:/projects/mlpack/\
+  boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_UNIT_TEST : "C:/projects/mlpack/\
+  boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  ARMADILLO_DOWNLOAD : "http://ftp.fau.de/macports/distfiles/armadillo/armadillo-8.400.0.tar.xz"
+  ARMADILLO_LIBRARY : "C:/projects/mlpack/armadillo-8.400.0/\
+  build/Debug/armadillo.lib"
+  BLAS_LIBRARY : "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
+  libopenblas.dll.a"
+  BOOST_INCLUDE : "C:/projects/mlpack/boost.1.60.0.0/lib/native/include"
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       VSVER: Visual Studio 14 2015 Win64
+      MSBUILD: C:\Program Files (x86)\MSBuild\14.0\bin\MSBuild.exe
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       VSVER: Visual Studio 15 2017 Win64
+      MSBUILD: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\MSBuild\15.0\Bin\MSBuild.exe
 
 configuration: Release
 
@@ -30,19 +48,19 @@ build_script:
   - ps: cp C:\projects\mlpack\boost_random-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
   - ps: cp C:\projects\mlpack\boost_serialization-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
   - ps: cp C:\projects\mlpack\boost_unit_test_framework-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
-  - if not exist armadillo.tar.xz appveyor DownloadFile "https://ayera.dl.sourceforge.net/project/arma/armadillo-8.400.0.tar.xz" -FileName armadillo.tar.xz
+  - if not exist armadillo.tar.xz appveyor DownloadFile %ARMADILLO_DOWNLOAD% -FileName armadillo.tar.xz
   - 7z x armadillo.tar.xz -so | 7z x -si -ttar > nul
   - cd armadillo-8.400.0 && mkdir build && cd build
-  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DCMAKE_PREFIX:FILEPATH="C:/projects/mlpack/armadillo" -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\mlpack\armadillo-8.400.0\build\armadillo.sln" /m /verbosity:quiet /p:Configuration=Release;Platform=x64'
+  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DCMAKE_PREFIX:FILEPATH="%APPVEYOR_BUILD_FOLDER%/armadillo" -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Release ..
+  - "%MSBUILD%" "C:\projects\mlpack\armadillo-8.400.0\build\armadillo.sln" /m /verbosity:quiet /p:Configuration=Release;Platform=x64'
   - cd C:\projects\mlpack && mkdir build && cd build
-  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-7.800.2/include" -DARMADILLO_LIBRARY:FILEPATH="C:\projects\mlpack\armadillo-8.400.0\build\Debug\armadillo.lib" -DBOOST_INCLUDEDIR:PATH="C:\projects\mlpack\boost.1.60.0.0\lib\native\include" -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\mlpack\build\mlpack.sln" /m /verbosity:minimal /nologo /p:BuildInParallel=true /p:Configuration=Release;Platform=x64'
+  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-8.400.0/include" -DARMADILLO_LIBRARY:FILEPATH=%ARMADILLO_LIBRARY% -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
+  - "%MSBUILD%" "C:\projects\mlpack\build\mlpack.sln" /m /verbosity:minimal /nologo /p:BuildInParallel=true /p:Configuration=Release;Platform=x64'
   - 7z a mlpack-windows-no-libs.zip "C:\projects\mlpack\build\Release\*.exe"
   - 7z a mlpack-windows.zip "C:\projects\mlpack\build\Release\*.*" "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
   - cd C:\projects\models && mkdir build && cd build
-  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-7.800.2/include" -DARMADILLO_LIBRARY:FILEPATH="C:\projects\mlpack\armadillo-8.400.0\build\Debug\armadillo.lib" -DBOOST_INCLUDEDIR:PATH="C:\projects\mlpack\boost.1.60.0.0\lib\native\include" -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DMLPACK_LIBRARY:FILEPATH="C:/projects/mlpack/build/Release/mlpack.lib" -DMLPACK_INCLUDE_DIR:PATH="C:/projects/mlpack/build/include" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64'
+  - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-8.400.0/include" -DARMADILLO_LIBRARY:FILEPATH="C:\projects\mlpack\armadillo-8.400.0\build\Debug\armadillo.lib" -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DMLPACK_LIBRARY:FILEPATH="C:/projects/mlpack/build/Release/mlpack.lib" -DMLPACK_INCLUDE_DIR:PATH="C:/projects/mlpack/build/include" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
+  - "%MSBUILD%" "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64'
 
 artifacts:
   - path: '**\*.zip'
