--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,14 @@
 clone_depth: 10
 
 environment:
-  BOOST_PROG_OPTION : "C:/projects/mlpack/\
-  boost_program_options-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_MATH : "C:/projects/mlpack/\
-  boost_math_c99-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_RANDOM : "C:/projects/mlpack/\
-  boost_random-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_SERIALIZATION : "C:/projects/mlpack/\
-  boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_UNIT_TEST : "C:/projects/mlpack/\
-  boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_PROG_OPTION : "C:/projects/mlpack/boost_program_options-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_MATH : "C:/projects/mlpack/boost_math_c99-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_RANDOM : "C:/projects/mlpack/boost_random-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_SERIALIZATION : "C:/projects/mlpack/boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  BOOST_UNIT_TEST : "C:/projects/mlpack/boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
   ARMADILLO_DOWNLOAD : "http://ftp.fau.de/macports/distfiles/armadillo/armadillo-8.400.0.tar.xz"
-  ARMADILLO_LIBRARY : "C:/projects/mlpack/armadillo-8.400.0/\
-  build/Debug/armadillo.lib"
-  BLAS_LIBRARY : "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
-  libopenblas.dll.a"
+  ARMADILLO_LIBRARY : "C:/projects/mlpack/armadillo-8.400.0/build/Debug/armadillo.lib"
+  BLAS_LIBRARY : "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/libopenblas.dll.a"
   BOOST_INCLUDE : "C:/projects/mlpack/boost.1.60.0.0/lib/native/include"
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -52,15 +45,15 @@ build_script:
   - 7z x armadillo.tar.xz -so | 7z x -si -ttar > nul
   - cd armadillo-8.400.0 && mkdir build && cd build
   - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DCMAKE_PREFIX:FILEPATH="%APPVEYOR_BUILD_FOLDER%/armadillo" -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - "%MSBUILD%" "C:\projects\mlpack\armadillo-8.400.0\build\armadillo.sln" /m /verbosity:quiet /p:Configuration=Release;Platform=x64
+  - msbuild  "C:\projects\mlpack\armadillo-8.400.0\build\armadillo.sln" /m /verbosity:quiet /p:Configuration=Release;Platform=x64
   - cd C:\projects\mlpack && mkdir build && cd build
   - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-8.400.0/include" -DARMADILLO_LIBRARY:FILEPATH=%ARMADILLO_LIBRARY% -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - "%MSBUILD%" "C:\projects\mlpack\build\mlpack.sln" /m /verbosity:minimal /nologo /p:BuildInParallel=true /p:Configuration=Release;Platform=x64
+  - msbuild  "C:\projects\mlpack\build\mlpack.sln" /m /verbosity:minimal /nologo /p:BuildInParallel=true /p:Configuration=Release;Platform=x64
   - 7z a mlpack-windows-no-libs.zip "C:\projects\mlpack\build\Release\*.exe"
   - 7z a mlpack-windows.zip "C:\projects\mlpack\build\Release\*.*" "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
   - cd C:\projects\models && mkdir build && cd build
   - cmake -G "%VSVER%" -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY% -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-8.400.0/include" -DARMADILLO_LIBRARY:FILEPATH="C:\projects\mlpack\armadillo-8.400.0\build\Debug\armadillo.lib" -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs" -DMLPACK_LIBRARY:FILEPATH="C:/projects/mlpack/build/Release/mlpack.lib" -DMLPACK_INCLUDE_DIR:PATH="C:/projects/mlpack/build/include" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release ..
-  - "%MSBUILD%" "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
+  - msbuild "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
 
 artifacts:
   - path: '**\*.zip'
