--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 clone_depth: 10
 
 environment:
+  BLAS_LIBRARY: "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/libopenblas.dll.a"
+  BLAS_LIBRARY_DLL: "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/libopenblas.dll"
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       VSVER: Visual Studio 14 2015 Win64
@@ -14,6 +16,7 @@ configuration: Release
 os: Visual Studio 2015
 
 install:
+  - nuget install OpenBLAS -o "${env:APPVEYOR_BUILD_FOLDER}"
   - vcpkg install openblas[core]:x64-windows
   - vcpkg install mlpack:x64-windows
   - cd c:\tools\vcpkg
@@ -21,7 +24,7 @@ install:
 
 build_script:
   - cd C:\projects\models && mkdir build && cd build
-  - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake ..
+  - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DLAPACK_LIBRARY=%BLAS_LIBRARY% -DBLAS_LIBRARY=%BLAS_LIBRARY%-DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake ..
   - msbuild "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
 
 artifacts:
