--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,4 +36,5 @@ notifications:
   on_build_status_changed: true
 
 cache:
-  - c:\tools\vcpkg\installed\
+  - packages -> **\packages.config
+  - armadillo.tar.xz -> appveyor.yaml
