move cd to projects/models

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,13 +47,14 @@ install:
   - vcpkg integrate install
 
 build_script:
+  - cd C:\projects\models
   - mkdir boost_libs
   - ps: cp ${env:BOOST_PROG_OPTION} C:\projects\models\boost_libs\
   - ps: cp ${env:BOOST_MATH} C:\projects\models\boost_libs\
   - ps: cp ${env:BOOST_RANDOM} C:\projects\models\boost_libs\
   - ps: cp ${env:BOOST_SERIALIZATION} C:\projects\models\boost_libs\
   - ps: cp ${env:BOOST_UNIT_TEST} C:\projects\models\boost_libs\
-  - cd C:\projects\models && mkdir build && cd build
+  - mkdir build && cd build
   - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:/projects/models/boost_libs" ..
   - msbuild "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
 
