try relying just on preinstalled boost?

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,6 @@
 clone_depth: 10
 
 environment:
-  BOOST_PROG_OPTION : "C:/projects/models/\
-  boost_program_options-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_MATH : "C:/projects/models/\
-  boost_math_c99-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_RANDOM : "C:/projects/models/\
-  boost_random-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_SERIALIZATION : "C:/projects/models/\
-  boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_UNIT_TEST : "C:/projects/models/\
-  boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_INCLUDE : "C:/projects/models/boost.1.60.0.0/lib/native/include"
   matrix:
     # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     #   VSVER: Visual Studio 14 2015 Win64
@@ -25,36 +14,14 @@ configuration: Release
 os: Visual Studio 2015
 
 install:
-  - ps: nuget install boost -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: >
-      nuget install boost_unit_test_framework-vc140
-      -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: >
-      nuget install boost_program_options-vc140
-      -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: >
-      nuget install boost_random-vc140
-      -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: >
-      nuget install boost_serialization-vc140
-      -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: >
-      nuget install boost_math_c99-vc140
-      -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
   - vcpkg install mlpack:x64-windows
   - cd c:\tools\vcpkg
   - vcpkg integrate install
 
 build_script:
   - cd C:\projects\models
-  - mkdir boost_libs
-  - ps: cp ${env:BOOST_PROG_OPTION} C:\projects\models\boost_libs\
-  - ps: cp ${env:BOOST_MATH} C:\projects\models\boost_libs\
-  - ps: cp ${env:BOOST_RANDOM} C:\projects\models\boost_libs\
-  - ps: cp ${env:BOOST_SERIALIZATION} C:\projects\models\boost_libs\
-  - ps: cp ${env:BOOST_UNIT_TEST} C:\projects\models\boost_libs\
   - mkdir build && cd build
-  - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE% -DBOOST_LIBRARYDIR:PATH="C:/projects/models/boost_libs" ..
+  - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DBOOST_ROOT=C:\Libraries\boost_1_71_0 ..
   - cmake --build . -- /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
 
 artifacts:
