--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,4 @@ notifications:
   on_build_failure: true
   on_build_status_changed: true
 
-cache:
-  - packages -> **\packages.config
-  - armadillo.tar.xz -> appveyor.yaml
+cache: c:\tools\vcpkg\installed\
