--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,13 +15,11 @@ os: Visual Studio 2015
 
 install:
   - vcpkg install mlpack:x64-windows
-  - vcpkg install boost --recurse
-  - cd c:\tools\vcpkg
   - vcpkg integrate install
 
 build_script:
-  - cd C:\projects\models
   - mkdir build && cd build
+  - cat c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
   - cmake -G "%VSVER%" -DCMAKE_PREFIX:FILEPATH="C:/projects/models" -DDEBUG=OFF -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake ..
   - cmake --build . -- /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64
 
