--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,16 +4,15 @@ environment:
   matrix:
     # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     #   VSVER: Visual Studio 14 2015 Win64
-    #   MSBUILD: C:\Program Files (x86)\MSBuild\14.0\bin\MSBuild.exe
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       VSVER: Visual Studio 15 2017 Win64
-      MSBUILD: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\MSBuild\15.0\Bin\MSBuild.exe
 
 configuration: Release
 
 os: Visual Studio 2015
 
 install:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - vcpkg install mlpack:x64-windows
   - vcpkg integrate install
 
