--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,10 @@ os: Visual Studio 2015
 
 install:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-  - vcpkg install mlpack:x64-windows
+  - curl -LfsS -o mlpack.zip https://ci.appveyor.com/api/buildjobs/n66607lew6gxntk4/artifacts/build%2Fmlpack-windows.zip
+  - 7z x mlpack.zip -o%APPVEYOR_BUILD_FOLDER%\dependencies -y > nul
+  - vcpkg install armadillo:x64-windows
+  - vcpkg install boost:x64-windows
   - vcpkg integrate install
 
 build_script:
