properly set env vars for mlpack

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,13 +51,15 @@ build_script:
   - cd %APPVEYOR_BUILD_FOLDER% && mkdir build && cd build
   - set MLPACK_LIB = "mlpack/build/Release/mlpack.lib"
   - set MLPACK_INCLUDE = "mlpack/build/include"
+  - set MLPACK_LIB = "%APPVEYOR_BUILD_FOLDER%/%MLPACK_LIB%"
+  - set MLPACK_INCLUDE = "%APPVEYOR_BUILD_FOLDER%/%MLPACK_INCLUDE%"
   - >
     cmake -G "%VSVER%"
     -DDEBUG=OFF -DPROFILE=OFF
     -DBOOST_ROOT=%BOOST_ROOT%
     -DBOOST_LIBRARYDIR=%BOOST_LIBRARYDIR%
-    -DMLPACK_LIBRARY:FILEPATH=%APPVEYOR_BUILD_FOLDER%/%MLPACK_LIB%
-    -DMLPACK_INCLUDE_DIR:PATH=%APPVEYOR_BUILD_FOLDER%/%MLPACK_INCLUDE%
+    -DMLPACK_LIBRARY:FILEPATH=%MLPACK_LIB%
+    -DMLPACK_INCLUDE_DIR:PATH=%MLPACK_INCLUDE%
     -DBUILD_PYTHON_BINDINGS=OFF -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake ..
   - >
