--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,8 +51,8 @@ build_script:
   - cd %APPVEYOR_BUILD_FOLDER% && mkdir build && cd build
   - set MLPACK_LIB = "mlpack/build/Release/mlpack.lib"
   - set MLPACK_INCLUDE = "mlpack/build/include"
-  - set MLPACK_LIB = "%APPVEYOR_BUILD_FOLDER%/%MLPACK_LIB%"
-  - set MLPACK_INCLUDE = "%APPVEYOR_BUILD_FOLDER%/%MLPACK_INCLUDE%"
+  - ps: $env:MLPACK_LIB = "$env:APPVEYOR_BUILD_FOLDER/$env:MLPACK_LIB"
+  - ps: $env:MLPACK_INCLUDE = "$env:APPVEYOR_BUILD_FOLDER/$env:MLPACK_INCLUDE"
   - >
     cmake -G "%VSVER%"
     -DDEBUG=OFF -DPROFILE=OFF
