--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -3,8 +3,7 @@ project(model-zoo)
 
 option(DEBUG "DEBUG" OFF)
 
-set(DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src)
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../")
+set(DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/)
 
 set(SOURCES
    alexnet.hpp
@@ -18,8 +17,10 @@ else()
    message("Compilation without debug info (without ggdb3 flag)")
 endif()
 
-# Add directory name to sources.
-set(DIR_SRCS)
 foreach(file ${SOURCES})
   set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
+
+# Append sources (with directory name) to list of all models sources (used at
+# the parent scope).
+set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
