Works without cmake (Next step : write clean mordern cmake)
Some Minor Fixes

LeNet switch

Add-support for downloading datasets

Transfered DigitRecognizer completely

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,13 +210,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 # Recurse into each model.
 set(DIRS
   # Model directories.
-  Kaggle/DigitRecognizer
-  Kaggle/DigitRecognizerCNN
-  Kaggle/DigitRecognizerBatchNorm
-  vae/vae_mnist
-  vae/vae_cnn_mnist
+  #vae/vae_mnist
+  #vae/vae_cnn_mnist
   LSTM/TimeSeries-Univariate
   LSTM/TimeSeries-Multivariate
+  dataloaders/
+  utils/
+  models/
+  examples/
 )
 
 foreach(dir ${DIRS})
