Adding vgg16 model built using VGG-Blocks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,8 @@ set(DIRS
   vae/vae_cnn_mnist
   LSTM/TimeSeries-Univariate
   LSTM/TimeSeries-Multivariate
+  vgg/
+  samples/
 )
 
 foreach(dir ${DIRS})
