--- a/mnist_simple/Makefile
+++ b/mnist_simple/Makefile
@@ -12,9 +12,11 @@ CXX := g++
 CXXFLAGS := -std=c++11 -Wall -Wextra -O3 -DNDEBUG
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and without optimizations.
 # CXXFLAGS := -std=c++11 -Wall -Wextra -g -O0
+
 LDFLAGS  := -fopenmp
-# LDFLAGS := -L/path/to/mlpack/library/    # if installed locally
+LDFLAGS := -L . #/path/to/mlpack/build/lib/    # if installed locally
 INCLFLAGS := -I . #Add header directories for any includes that aren't on the default compiler search path.
+CPPFLAGS := $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
 LIBS := $(addprefix -l,$(LIBS_NAME))
@@ -24,7 +26,7 @@ CLEAN_LIST := $(TARGET) $(OBJS)
 default: all
 
 $(TARGET): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) $(INCLFLAGS) $(LIBS) $(LDFLAGS)
+	$(CXX) $(OBJS) -o $(TARGET) $(LDFLAGS) $(LIBS)
 
 .PHONY: all
 all: $(TARGET)
