--- a/mnist_simple/Makefile
+++ b/mnist_simple/Makefile
@@ -9,14 +9,14 @@ SRC := mnist_simple.cpp
 LIBS_NAME := armadillo mlpack boost_serialization
 
 CXX := g++
-CXXFLAGS := -std=c++11 -Wall -Wextra -O3 -DNDEBUG
+CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and without optimizations.
-# CXXFLAGS := -std=c++11 -Wall -Wextra -g -O0
+# CXXFLAGS += -std=c++11 -Wall -Wextra -g -O0
 
 LDFLAGS  := -fopenmp
 LDFLAGS := -L . #/path/to/mlpack/build/lib/    # if installed locally
 INCLFLAGS := -I . #Add header directories for any includes that aren't on the default compiler search path.
-CPPFLAGS := $(INCLFLAGS)
+CXXFLAGS += $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
 LIBS := $(addprefix -l,$(LIBS_NAME))
