--- a/lstm_electricity_consumption/Makefile
+++ b/lstm_electricity_consumption/Makefile
@@ -9,12 +9,13 @@ SRC := lstm_electricity_consumption.cpp
 LIBS_NAME := armadillo mlpack boost_serialization
 
 CXX := g++
-CXXFLAGS := -std=c++11 -Wall -Wextra -O3 -DNDEBUG
+CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and without optimizations.
-# CXXFLAGS := -std=c++11 -Wall -Wextra -g -O0
+# CXXFLAGS += -std=c++11 -Wall -Wextra -g -O0
 LDFLAGS  := -fopenmp
 # LDFLAGS := -L/path/to/mlpack/library/    # if installed locally
 INCLFLAGS := -I . #Add header directories for any includes that aren't on the default compiler search path.
+CXXFLAGS += $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
 LIBS := $(addprefix -l,$(LIBS_NAME))
@@ -24,7 +25,7 @@ CLEAN_LIST := $(TARGET) $(OBJS)
 default: all
 
 $(TARGET): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) $(INCLFLAGS) $(LIBS) $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) $(LDFLAGS) $(LIBS)
 
 .PHONY: all
 all: $(TARGET)
