--- a/lstm_electricity_consumption/Makefile
+++ b/lstm_electricity_consumption/Makefile
@@ -13,7 +13,7 @@ CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and without optimizations.
 # CXXFLAGS += -std=c++11 -Wall -Wextra -g -O0
 LDFLAGS  += -fopenmp
-# LDFLAGS += -L/path/to/mlpack/library/    # if installed locally
+# LDFLAGS += -L/path/to/mlpack/library/    # If installed locally.
 INCLFLAGS := -I . #Add header directories for any includes that aren't on the default compiler search path.
 CXXFLAGS += $(INCLFLAGS)
 
