Apply mlpack comments style on makefiles
Signed-off-by: Omar Shrit <shrit@lri.fr>

--- a/mnist_simple/Makefile
+++ b/mnist_simple/Makefile
@@ -10,12 +10,15 @@ LIBS_NAME := armadillo mlpack boost_serialization
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
-# Use these CXXFLAGS instead if you want to compile with debugging symbols and without optimizations.
+# Use these CXXFLAGS instead if you want to compile with debugging symbols and
+# without optimizations.
 # CXXFLAGS += -std=c++11 -Wall -Wextra -g -O0
 
 LDFLAGS  += -fopenmp
-LDFLAGS += -L . #/path/to/mlpack/build/lib/    # if installed locally
-INCLFLAGS := -I . #Add header directories for any includes that aren't on the default compiler search path.
+LDFLAGS += -L . # /path/to/mlpack/build/lib/  # if installed locally.
+# Add header directories for any includes that aren't on the
+# default compiler search path.
+INCLFLAGS := -I .
 CXXFLAGS += $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
